fix: allow chapter to show ellipsis when too long

--- a/client/src/module/bookmarks/component/BookmarkChapterViewContent/BookmarkChapterViewContent.scss
+++ b/client/src/module/bookmarks/component/BookmarkChapterViewContent/BookmarkChapterViewContent.scss
@@ -1,6 +1,4 @@
 .bookmark-chapter-view-content {
-  display: flex;
-  align-items: center;
   overflow: hidden;
   font-size: 16px;
   text-overflow: ellipsis;
